# DataMat

./: .gitignore  404.html  AGENTS.org  CONTRIBUTING.org  Makefile  README.org  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/skills/jax-pandas-bridge/: SKILL.md
.github/workflows/: docs.yml
api/datamat/: index.html
api/datavec/: index.html
automation/: 2025-10-25.org
docs/: index.md
docs/api/: datamat.md  datavec.md
docs/automation/: 2025-10-25.org  2025-10-27.org
docs/guide/: getting-started.md
docs/notes/: norms.md
guide/getting-started/: index.html
notes/: norms.org
notes/norms/: index.html
scripts/: generate_release_notes.py
search/: search_index.json
src/datamat/: __init__.py  core.py  utils.py
tests/: test_binary_ops.py  test_concat.py  test_concat_parity.py  test_datavec_init.py  test_drop_vestigial_axis.py  test_dummies.py  test_econometrics.py  test_getitem_retry.py  test_index_multiplication.py  test_jax_conversion.py  test_kron_level_collision.py  test_kron_paths.py  test_label_preservation.py  test_linalg_wrappers.py  test_low_priority_cleanups.py  test_mutation_invalidation.py  test_projection.py  test_property_concat.py  test_property_reconcile_indices.py  test_random_generation.py  test_reconcile_indices.py  test_singleton_column_relabel.py  test_triangular.py  test_use_indices.py  test_vestigial_definition.py
