[tool.poetry]
name = "datamat"
version = "0.1.0"
description = "Matrix Operations on Data Arrays"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
authors = ["Ethan Ligon <ligon@berkeley.edu>"]
packages = [{ include = "datamat", from = "src" }]
keywords = ["pandas", "matrix", "econometrics", "dataframe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=1.22"
pandas = ">=1.4"
scipy = ">=1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.4"
black = "^24.4.2"
mypy = "^1.10.0"
ipython = "^8.26.0"
matplotlib = "^3.10.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5"
mkdocs-material = ">=9.5"
mkdocstrings = { version = ">=0.24", extras = ["python"] }
jax = {extras = ["cpu"], version = "^0.8.0"}

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5"
mkdocs-material = ">=9.5"
mkdocstrings = { version = ">=0.24", extras = ["python"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["numpy", "pandas", "scipy"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[tool.poetry.urls]
Homepage = "https://github.com/ligon/DataMat"
Repository = "https://github.com/ligon/DataMat"
Documentation = "https://github.com/ligon/DataMat#readme"
BugTracker = "https://github.com/ligon/DataMat/issues"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
